--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,73 @@
-.hello {
-  color: red;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: rgb(37, 88, 112);
+  width: 100%;
+  place-items: center;
+  display: grid;
+  gap: 2rem;
+  transition: all 1s;
+}
+
+.todo-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.todo-header,
+footer {
+  width: 40%;
+  background-color: #fff;
+}
+
+.header,
+form {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 20px;
+  border-bottom: 1px solid rgb(184, 183, 183);
+}
+
+h1 {
+  font-size: 20px;
+}
+
+form,
+input {
+  width: 100%;
+}
+
+input {
+  border: none;
+  outline: none;
+  font-size: 16px;
+}
+
+i,
+form {
+  cursor: pointer;
+}
+
+.checkbox {
+  flex: 2;
+}
+
+.check-content {
+  display: flex;
+  gap: 20px;
+}
+
+footer {
+  background-color: rgb(201, 201, 201);
+  padding: 20px;
+  text-align: center;
 }
