--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ form {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 20px;
+  padding: 15px 20px;
   border-bottom: 1px solid rgb(184, 183, 183);
 }
 
@@ -50,6 +50,7 @@ input {
   border: none;
   outline: none;
   font-size: 16px;
+  font-style: italic;
 }
 
 i,
@@ -57,17 +58,58 @@ form {
   cursor: pointer;
 }
 
-.checkbox {
-  flex: 2;
+.check-content,
+.check-and-content {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  border-bottom: 1px solid rgb(184, 183, 183);
 }
 
-.check-content {
-  display: flex;
-  gap: 20px;
+.check-and-content {
+  border-bottom: unset;
+  padding-bottom: 10px;
 }
 
 footer {
   background-color: rgb(201, 201, 201);
   padding: 20px;
   text-align: center;
+}
+
+input:not([type='radio']):not([type='checkbox']),
+button {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: initial;
+}
+
+.actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.edit,
+.delete {
+  cursor: pointer;
+}
+
+.check-content.done .check-and-content input {
+  text-decoration: line-through;
+  color: red;
+}
+
+.delete {
+  display: none;
+}
+
+.delete i {
+  color: red;
 }
